triton_backend_sys/src/bindings.rs

pub const tritonserver_requestflag_enum_TRITONSERVER_REQUEST_FLAG_SEQUENCE_START:
    tritonserver_requestflag_enum = 1;
pub const tritonserver_requestflag_enum_TRITONSERVER_REQUEST_FLAG_SEQUENCE_END:
    tritonserver_requestflag_enum = 2;
#[doc = " Inference request flags. The enum values must be power-of-2 values."]
pub type tritonserver_requestflag_enum = ::std::os::raw::c_uint;
#[doc = " Inference request flags. The enum values must be power-of-2 values."]
pub use self::tritonserver_requestflag_enum as TRITONSERVER_RequestFlag;
pub const tritonserver_requestreleaseflag_enum_TRITONSERVER_REQUEST_RELEASE_ALL:
    tritonserver_requestreleaseflag_enum = 1;
#[doc = " Inference request release flags. The enum values must be\n power-of-2 values."]
pub type tritonserver_requestreleaseflag_enum = ::std::os::raw::c_uint;
#[doc = " Inference request release flags. The enum values must be\n power-of-2 values."]
pub use self::tritonserver_requestreleaseflag_enum as TRITONSERVER_RequestReleaseFlag;
pub const tritonserver_responsecompleteflag_enum_TRITONSERVER_RESPONSE_COMPLETE_FINAL:
    tritonserver_responsecompleteflag_enum = 1;
#[doc = " Inference response complete flags. The enum values must be\n power-of-2 values."]
pub type tritonserver_responsecompleteflag_enum = ::std::os::raw::c_uint;
#[doc = " Inference response complete flags. The enum values must be\n power-of-2 values."]
pub use self::tritonserver_responsecompleteflag_enum as TRITONSERVER_ResponseCompleteFlag;
#[doc = " Type for inference request release callback function. The callback\n indicates what type of release is being performed on the request\n and for some of these the callback function takes ownership of the\n TRITONSERVER_InferenceRequest object. The 'userp' data is the data\n provided as 'request_release_userp' in the call to\n TRITONSERVER_InferenceRequestSetReleaseCallback.\n\n One or more flags will be specified when the callback is invoked,\n and the callback must take the following actions:\n\n   - TRITONSERVER_REQUEST_RELEASE_ALL: The entire inference request\n     is being released and ownership is passed to the callback\n     function. Triton will not longer access the 'request' object\n     itself nor any input tensor data associated with the\n     request. The callback should free or otherwise manage the\n     'request' object and all associated tensor data.\n\n Note that currently TRITONSERVER_REQUEST_RELEASE_ALL should always\n be set when the callback is invoked but in the future that may\n change, so the callback should explicitly check for the flag\n before taking ownership of the request object.\n"]
pub type TRITONSERVER_InferenceRequestReleaseFn_t = ::std::option::Option<
    unsafe extern "C" fn(
        request: *mut TRITONSERVER_InferenceRequest,
        flags: u32,
        userp: *mut ::std::os::raw::c_void,
    ),
>;
#[doc = " Type for callback function indicating that an inference response\n has completed. The callback function takes ownership of the\n TRITONSERVER_InferenceResponse object. The 'userp' data is the\n data provided as 'response_userp' in the call to\n TRITONSERVER_InferenceRequestSetResponseCallback.\n\n One or more flags may be specified when the callback is invoked:\n\n   - TRITONSERVER_RESPONSE_COMPLETE_FINAL: Indicates that no more\n     responses will be generated for a given request (more\n     specifically, that no more responses will be generated for the\n     inference request that set this callback and 'userp'). When\n     this flag is set 'response' may be a response object or may be\n     nullptr. If 'response' is not nullptr, then 'response' is the\n     last response that Triton will produce for the request. If\n     'response' is nullptr then Triton is indicating that no more\n     responses will be produced for the request."]
pub type TRITONSERVER_InferenceResponseCompleteFn_t = ::std::option::Option<
    unsafe extern "C" fn(
        response: *mut TRITONSERVER_InferenceResponse,
        flags: u32,
        userp: *mut ::std::os::raw::c_void,
    ),
>;
extern "C" {
    #[doc = " Create a new inference request object.\n\n \\param inference_request Returns the new request object.\n \\param server the inference server object.\n \\param model_name The name of the model to use for the request.\n \\param model_version The version of the model to use for the\n request. If -1 then the server will choose a version based on the\n model's policy.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestNew(
        inference_request: *mut *mut TRITONSERVER_InferenceRequest,
        server: *mut TRITONSERVER_Server,
        model_name: *const ::std::os::raw::c_char,
        model_version: i64,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Delete an inference request object.\n\n \\param inference_request The request object.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestDelete(
        inference_request: *mut TRITONSERVER_InferenceRequest,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get the ID for a request. The returned ID is owned by\n 'inference_request' and must not be modified or freed by the\n caller.\n\n \\param inference_request The request object.\n \\param id Returns the ID.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestId(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        id: *mut *const ::std::os::raw::c_char,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the ID for a request.\n\n \\param inference_request The request object.\n \\param id The ID.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestSetId(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        id: *const ::std::os::raw::c_char,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get the flag(s) associated with a request. On return 'flags' holds\n a bitwise-or of all flag values, see TRITONSERVER_RequestFlag for\n available flags.\n\n \\param inference_request The request object.\n \\param flags Returns the flags.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestFlags(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        flags: *mut u32,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the flag(s) associated with a request. 'flags' should hold a\n bitwise-or of all flag values, see TRITONSERVER_RequestFlag for\n available flags.\n\n \\param inference_request The request object.\n \\param flags The flags.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestSetFlags(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        flags: u32,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get the correlation ID of the inference request as an unsigned integer.\n Default is 0, which indicates that the request has no correlation ID.\n If the correlation id associated with the inference request is a string,\n this function will return a failure. The correlation ID is used\n to indicate two or more inference request are related to each other.\n How this relationship is handled by the inference server is determined by\n the model's scheduling policy.\n\n \\param inference_request The request object.\n \\param correlation_id Returns the correlation ID.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestCorrelationId(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        correlation_id: *mut u64,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get the correlation ID of the inference request as a string.\n Default is empty \"\", which indicates that the request has no correlation ID.\n If the correlation id associated with the inference request is an unsigned\n integer, then this function will return a failure. The correlation ID\n is used to indicate two or more inference request are related to each other.\n How this relationship is handled by the inference server is determined by\n the model's scheduling policy.\n\n \\param inference_request The request object.\n \\param correlation_id Returns the correlation ID.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestCorrelationIdString(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        correlation_id: *mut *const ::std::os::raw::c_char,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the correlation ID of the inference request to be an unsigned integer.\n Default is 0, which indicates that the request has no correlation ID.\n The correlation ID is used to indicate two or more inference request\n are related to each other. How this relationship is handled by the\n inference server is determined by the model's scheduling policy.\n\n \\param inference_request The request object.\n \\param correlation_id The correlation ID.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestSetCorrelationId(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        correlation_id: u64,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the correlation ID of the inference request to be a string.\n The correlation ID is used to indicate two or more inference\n request are related to each other. How this relationship is\n handled by the inference server is determined by the model's\n scheduling policy.\n\n \\param inference_request The request object.\n \\param correlation_id The correlation ID.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestSetCorrelationIdString(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        correlation_id: *const ::std::os::raw::c_char,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get the priority for a request. The default is 0 indicating that\n the request does not specify a priority and so will use the\n model's default priority.\n\n \\param inference_request The request object.\n \\param priority Returns the priority level.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestPriority(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        priority: *mut u32,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the priority for a request. The default is 0 indicating that\n the request does not specify a priority and so will use the\n model's default priority.\n\n \\param inference_request The request object.\n \\param priority The priority level.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestSetPriority(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        priority: u32,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get the timeout for a request, in microseconds. The default is 0\n which indicates that the request has no timeout.\n\n \\param inference_request The request object.\n \\param timeout_us Returns the timeout, in microseconds.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceRequestTimeoutMicroseconds(
        inference_request: *mut TRITONSERVER_InferenceRequest,
        timeout_us: *mut u64,
    ) -> *mut TRITONSERVER_Error;
}
